fix pagination stretching buttons

--- a/addon/styles/components/ui-pagination--default.scss
+++ b/addon/styles/components/ui-pagination--default.scss
@@ -3,4 +3,5 @@
   margin-top: 1em;
   display: flex;
   line-height: 2.4em;
+  align-items: center;
 }
